fix: align buttons in horizontal orientation
Close #174

--- a/src/main/resources/META-INF/resources/frontend/styles/twincol-grid.css
+++ b/src/main/resources/META-INF/resources/frontend/styles/twincol-grid.css
@@ -44,3 +44,7 @@
   color: var(--lumo-error-text-color);
 }
 
+.twincol-grid .fake-button-container-label {
+  font-size: var(--lumo-font-size-s);
+  margin-bottom: calc(var(--vaadin-button-margin, var(--lumo-space-xs))* -1);
+}
